--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
-# Ignore build output
+# .gitignore
 .next/
-out/
-
-# Ignore dependencies
 node_modules/
-package-lock.json
-yarn.lock
-
-# Ignore system files
-.DS_Store
-
-# Ignore logs
+out/
+dist/
 *.log
+.DS_Store
+.env
