--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.11.0",
+    "lucide-react": "^0.510.0",
     "next": "15.3.1",
     "postcss": "^8.4.21",
     "react": "18.2.0",
