--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run check:font && next build",
     "start": "next start",
-    "export": "next export"
+    "export": "next export",
+    "check:font": "node scripts/check-font.js"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
